--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ dotenv = "0.15.0"
 humantime = "2.2.0"
 poise = "0.6.1"
 serenity = { version = "0.12.4", features = ["model", "cache"] }
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
 tokio = { version = "1.45.1", features = ["full"] }
